# computational-content-analysis

./: .gitignore  .pre-commit-config.yaml  1-Measuring-Meaning-and-Sampling.ipynb  2-Counting Words & Phrases to Trace the Distribution of Meaning.ipynb  3-MichaelPlunkett_Answers.ipynb  3_Topic_Modeling_and_Clustering.ipynb  4-MichaelPlunkett-Answers.ipynb  4_Word_Embeddings.ipynb  5-MichaelPlunkett-Answers.ipynb  6-MichaelPlunkett-Answers.ipynb  7-MichaelPlunkett-Answers.ipynb  8-MichaelPlunkett-Answers.ipynb  9-MichaelPlunkett-Answers.ipynb  Makefile  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
data/: whReleases.csv
data/Bayesian-echo/src/: bec.py  bec_sampler.py  hawkes.py  likelihoods.py  run_bec.py  slice_sampler.py  talkbankXMLparse.py
data/Shakespeare/: king_henry_4_p1.txt  taming_of_the_shrew.txt
data/audio_samples/: SBC060.trn
data/cola_public/: README
data/dataforgssstudy/: testH.csv
data/grimmerPressReleases/Kennedy/: 01Apr2005Kennedy14.txt  01Aug2005Kennedy12.txt  01Aug2006Kennedy10.txt  01Aug2006Kennedy11.txt  01Aug2006Kennedy12.txt  01Aug2006Kennedy13.txt  01Aug2006Kennedy14.txt  01Aug2007Kennedy5.txt  01Aug2007Kennedy6.txt  01Aug2007Kennedy7.txt  01Dec2005Kennedy10.txt  01Dec2005Kennedy11.txt  01Dec2005Kennedy12.txt  01Dec2005Kennedy13.txt  01Dec2005Kennedy14.txt  01Dec2006Kennedy1.txt  01Dec2006Kennedy2.txt  01Feb2005Kennedy5.txt  01Feb2006Kennedy0.txt  01Feb2006Kennedy10.txt  01Feb2006Kennedy11.txt  01Feb2006Kennedy12.txt  01Feb2006Kennedy13.txt  01Feb2006Kennedy14.txt  01Feb2006Kennedy9.txt  01Feb2007Kennedy0.txt  01Feb2007Kennedy1.txt  01Feb2007Kennedy11.txt  01Feb2007Kennedy12.txt  01Feb2007Kennedy13.txt  01Feb2007Kennedy14.txt  01Feb2007Kennedy2.txt  01Feb2007Kennedy3.txt  01Feb2007Kennedy4.txt  01Feb2007Kennedy5.txt  01Jul2005Kennedy0.txt  01Jul2005Kennedy14.txt  01Jun2006Kennedy7.txt  01Jun2006Kennedy8.txt  01Jun2007Kennedy10.txt  (+1647 more)
data/grimmerPressReleases/Kerry/: 01Apr2006Kerry153.txt  01Aug2005Kerry103.txt  01Aug2007Kerry204.txt  01Aug2007Kerry205.txt  01Aug2007Kerry206.txt  01Aug2007Kerry207.txt  01Dec2005Kerry11.txt  01Feb2007Kerry473.txt  01Feb2007Kerry474.txt  01Feb2007Kerry475.txt  01Feb2007Kerry476.txt  01Jul2005Kerry132.txt  01Jun2006Kerry116.txt  01Jun2006Kerry117.txt  01Jun2006Kerry118.txt  (+973 more)
data/trump_tweets/: condensed_2014.json  condensed_2015.json  condensed_2016.json  condensed_2017.json  condensed_2018.json
exercises/: bend_it_like_beckham.txt  python_tutorial.ipynb
week-1/: 1-Measuring-Meaning-and-Sampling.ipynb
(+1213 files in other folders)
