[tool.poetry]
name = "Computational Content Analysis Work"
version = "0.1.0"
description = "This repository is contains homework/classwork submissions for the Computational Content Analysis class at UChicago."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
