[tool.poetry]
name = "Computational Content Analysis Work"
version = "0.1.0"
description = "This repository is contains homework/classwork submissions for the Computational Content Analysis class at UChicago."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
lucem-illud = {git = "https://github.com/UChicago-Computational-Content-Analysis/lucem_illud.git"}
requests = "^2.31.0"
pandas = "^2.1.4"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.2"
pdfminer = "^20191125"
spacy = "^2"
jupyter-black = "^0.3.4"
jupyter = "^1.0.0"
graphviz = "^0.20.1"
seaborn = "^0.13.1"
wordcloud = "^1.9.3"
gensim = "^4.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
