[tool.poetry]
name = "Computational Content Analysis Work"
version = "0.1.0"
description = "This repository is contains homework/classwork submissions for the Computational Content Analysis class at UChicago."
authors = ["michplunkett"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.4.0"
lucem-illud = {git = "https://github.com/UChicago-Computational-Content-Analysis/lucem_illud.git"}
requests = "^2.31.0"
pandas = "^1"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.2"
pdfminer = "^20191125"
spacy = "^3.7.2"
jupyter-black = "^0.3.4"
jupyter = "^1.0.0"
graphviz = "^0.20.1"
seaborn = "^0.13.1"
wordcloud = "^1.9.3"
gensim = "^4.3.2"
pyarrow = "^15.0.0"
pybind11 = "^2.11.1"
wheel = "^0.42.0"
fasttext = "^0.9.2"
tdqm = "^0.0.1"
ksvd = "^0.0.3"
transformers = "^4.37.2"
torch = "^2.2.0"
openai = "0.28.1"
datasets = "^2.16.1"
peft = "^0.8.2"
trl = "^0.7.10"
tensorboard = "^2.15.1"
frugalgpt = {git = "https://github.com/stanford-futuredata/FrugalGPT.git", rev = "0.0.1"}
langchain = "0.0.316"
python-dotenv = "^1.0.1"
statsmodels = "^0.14.1"
convokit = "^3.0.0"
sentence-transformers = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
